# liz-sensors

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  DHTHelper.h  EEPROMHelper.h  LICENSE  MQTTHelper.h  OTAHelper.h  PRINTHelper.h  README.md  ReadTempAndHumidity.ino  TestWiFi.ino  WIFIHelper.h  WIZHelper.h  WebServer.h  extra_script.py  liz.cpp  liz.h  platformio.ini  provisionDevice.py  pyproject.toml  wifi.ino  wiz-controller.ino
.github/linters/: .cpplint
.github/workflows/: enforcer.yml  lint.yml  release-please.yml  release.yml
assets/calibration/: calibration.md
assets/easyEDA/: SCH_Liz_2024-12-03.json  SCH_Liz_2025-01-02.json
assets/geogebra/: power-graph.ggb
assets/kicad/: New Text Document.txt
assets/kicad/DIOAD1036W78L470D235/: 1N5819.kicad_sym  1N5819.step  (+1 more)
assets/liz/: fp-info-cache  liz.kicad_prl  liz.kicad_pro  liz.kicad_sch
scripts/: create_admin_user.py  create_sensor_user.py  exponential_correction.py  main.py  utils.py  verify.py
src/: BMEHelper.h  DHTHelper.h  EEPROMHelper.cpp  EEPROMHelper.h  MQTTHelper.cpp  MQTTHelper.h  OTAHelper.h  PRINTHelper.h  SensorController.h  TestWiFi.ino  VoltmeterController.h  WIFIHelper.h  WIZHelper.h  WebServer.h  WebSite.h  main.cpp
src/controllers/: SensorController.cpp  SensorController.h  VoltmeterController.cpp  VoltmeterController.h
src/helpers/: EEPROMHelper.cpp  EEPROMHelper.h  LogHelper.h  MQTTHelper.cpp  MQTTHelper.h  OTAHelper.cpp  OTAHelper.h  PRINTHelper.cpp  PRINTHelper.h  WIFIHelper.cpp  WIFIHelper.h  WIZHelper.cpp  WIZHelper.h
src/web/: WebSite.cpp  WebSite.h
(+65 files in other folders)
