[tool.poetry]
name = "231202-084716-d1-mini"
version = "0.1.0"
description = ""
authors = ["sondre Sjølyst <sonyslyst@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "231202_084716_d1_mini"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
pyserial = "^3.5"
hvac = "^2.3.0"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
